--- a/_includes/landing/profile.html
+++ b/_includes/landing/profile.html
@@ -33,8 +33,7 @@
         <div class="ps-md-4 ps-xl-0">
           <h2 class="h1 pb-3 mb-2 mb-md-3 mb-xl-4">Why work with me?</h2>
           <p class="fs-lg pb-3 mb-3">
-            Over 25 years’ experience supporting children and families across
-            Sussex.
+           My name is Mel, and I am a qualified practitioner with post-graduate level training and professional registration. My therapeutic practice developed after working for over twenty years in education, with over ten years as a specialist SEND teacher. I work holistically with the child at the centre, in a way that is both permissive and develops a sense of responsibility. I have a deep understanding of child development and am both attachment & trauma-informed. I have a specific interest in neurodiversity and have worked with Autistic children and their families for over ten years. Play Therapy offers expression through play and unconditional acceptance of all brain functions and is therefore inherently neuro-affirming.
           </p>
           <ul class="list-unstyled pb-1 pb-xl-2">
             <li class="d-flex align-items-center fs-lg pb-1 mb-3">
