update primary colours and readme

--- a/src/scss/_user-variables.scss
+++ b/src/scss/_user-variables.scss
@@ -8,5 +8,5 @@
 // $body-bg: #f6f9fc;
 
 $font-family-sans-serif: poppins, sans-serif;
-$primary: #1087c3 !default;
-$secondary: #e88949 !default;
+$primary: #405d8f !default;
+$secondary: #638979 !default;
